@@ -15,23 +15,21 @@
  */
 package ch.post.it.evoting.verifier.backend.verifications.setup.consistency;
 
+import static ch.post.it.evoting.cryptoprimitives.collection.ImmutableList.toImmutableList;
+import static ch.post.it.evoting.cryptoprimitives.collection.ImmutableSet.toImmutableSet;
 import static com.google.common.base.Preconditions.checkArgument;
 
 import java.nio.file.Path;
-import java.util.Collection;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableSet;
 import ch.post.it.evoting.verifier.backend.AbstractVerification;
 import ch.post.it.evoting.verifier.backend.Category;
 import ch.post.it.evoting.verifier.backend.VerificationDefinition;
 import ch.post.it.evoting.verifier.backend.VerificationResult;
-import ch.post.it.evoting.verifier.backend.dataextractors.ControlComponentCodeSharesPayloadDataExtractor;
 import ch.post.it.evoting.verifier.backend.dataextractors.SetupComponentTallyDataPayloadDataExtractor;
-import ch.post.it.evoting.verifier.backend.dataextractors.SetupComponentVerificationDataPayloadDataExtractor;
 import ch.post.it.evoting.verifier.backend.event.SetupEvent;
 import ch.post.it.evoting.verifier.backend.processor.ResultPublisherService;
 import ch.post.it.evoting.verifier.backend.tools.ElectionDataExtractionService;
@@ -71,9 +69,7 @@ public class VerifyVerificationCardSetIdsConsistency extends AbstractVerificatio
 		final boolean sameVerificationCardSetIds = extractVerificationCardSetIds(inputDirectoryPath).stream()
 				.parallel()
 				.map(payloadsVerificationCardSetIds ->
-						payloadsVerificationCardSetIds.verificationCardSetId().equals(payloadsVerificationCardSetIds.verificationDataIds())
-								&& payloadsVerificationCardSetIds.verificationCardSetId().equals(payloadsVerificationCardSetIds.codeShareIds())
-								&& payloadsVerificationCardSetIds.verificationCardSetId().equals(payloadsVerificationCardSetIds.tallyIds()))
+						payloadsVerificationCardSetIds.verificationCardSetId().equals(payloadsVerificationCardSetIds.tallyIds()))
 				.reduce(Boolean::logicalAnd)
 				.orElse(Boolean.FALSE);
 
@@ -85,49 +81,27 @@ public class VerifyVerificationCardSetIdsConsistency extends AbstractVerificatio
 		}
 	}
 
-	private List<PayloadsVerificationCardSetIds> extractVerificationCardSetIds(final Path inputDirectoryPath) {
+	private ImmutableList<PayloadsVerificationCardSetIds> extractVerificationCardSetIds(final Path inputDirectoryPath) {
 
-		final List<Path> contextVerificationCardSetPaths = electionDataExtractionService.getContextVerificationCardSetPaths(inputDirectoryPath);
-
-		return electionDataExtractionService.getSetupVerificationCardSetPaths(inputDirectoryPath).stream()
+		return electionDataExtractionService.getContextVerificationCardSetPaths(inputDirectoryPath).stream()
 				.parallel()
 				.map(verificationCardSetIdPath -> {
 
-					final String vcsId = verificationCardSetIdPath.getFileName().toString();
-					final Set<String> verificationCardSetId = Set.of(vcsId);
+					final ImmutableSet<String> verificationCardSetId = ImmutableSet.of(verificationCardSetIdPath.getFileName().toString());
 
-					final Set<String> verificationDataIds = electionDataExtractionService.getSetupComponentVerificationDataPayloadsDataExtractionsSortedByChunkId(
-									verificationCardSetIdPath)
-							.map(SetupComponentVerificationDataPayloadDataExtractor.DataExtraction::verificationCardSetId)
-							.collect(Collectors.toUnmodifiableSet());
-
-					checkArgument(verificationDataIds.size() == 1, "The setup component verification card set id size must be one.");
-
-					final Set<String> codeShareIds = electionDataExtractionService.getControlComponentCodeSharesPayloadsDataExtractions(
-									verificationCardSetIdPath)
-							.map(ControlComponentCodeSharesPayloadDataExtractor.DataExtraction::verificationCardSetIds)
-							.flatMap(Collection::stream)
-							.collect(Collectors.toUnmodifiableSet());
-
-					checkArgument(codeShareIds.size() == 1, "The control component code shares verification card set id size must be one.");
-
-					final Set<String> tallyIds = contextVerificationCardSetPaths.stream()
-							.parallel()
-							.filter(vcsPath -> vcsPath.getFileName().toString().equals(vcsId))
-							.flatMap(electionDataExtractionService::getSetupComponentTallyDataPayloadsDataExtractions)
+					final ImmutableSet<String> tallyIds = electionDataExtractionService.getSetupComponentTallyDataPayloadsDataExtractions(verificationCardSetIdPath)
 							.map(SetupComponentTallyDataPayloadDataExtractor.DataExtraction::verificationCardSetId)
-							.collect(Collectors.toUnmodifiableSet());
+							.collect(toImmutableSet());
 
 					checkArgument(tallyIds.size() == 1, "The setup component tally verification card set id size must be one.");
 
-					return new PayloadsVerificationCardSetIds(verificationCardSetId, verificationDataIds, codeShareIds, tallyIds);
+					return new PayloadsVerificationCardSetIds(verificationCardSetId, tallyIds);
 
 				})
-				.toList();
+				.collect(toImmutableList());
 	}
 
-	private record PayloadsVerificationCardSetIds(Set<String> verificationCardSetId, Set<String> verificationDataIds, Set<String> codeShareIds,
-												  Set<String> tallyIds) {
+	private record PayloadsVerificationCardSetIds(ImmutableSet<String> verificationCardSetId, ImmutableSet<String> tallyIds) {
 	}
 
 }
