@@ -18,12 +18,12 @@ package ch.post.it.evoting.verifier.backend.verifications.tally.evidence;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkNotNull;
 
-import java.util.List;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
+import ch.post.it.evoting.cryptoprimitives.collection.AuxiliaryInformation;
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
 import ch.post.it.evoting.cryptoprimitives.elgamal.ElGamalMultiRecipientCiphertext;
 import ch.post.it.evoting.cryptoprimitives.elgamal.ElGamalMultiRecipientMessage;
 import ch.post.it.evoting.cryptoprimitives.elgamal.ElGamalMultiRecipientPublicKey;
@@ -100,8 +100,8 @@ public class VerifyTallyControlComponentBallotBoxAlgorithm {
 		final GroupVector<ElGamalMultiRecipientMessage, GqGroup> m = input.getVerifiablePlaintextDecryption().getDecryptedVotes();
 		final VerifiableDecryptions pi_dec_5 = input.getVerifiableDecryptions();
 		final GroupVector<GroupVector<PrimeGqElement, GqGroup>, GqGroup> L_votes = input.getSelectedEncodedVotingOptions();
-		final List<List<String>> L_decodedVotes = input.getSelectedDecodedVotingOptions();
-		final List<List<String>> L_writeIns = input.getSelectedDecodedWriteInVotes();
+		final ImmutableList<ImmutableList<String>> L_decodedVotes = input.getSelectedDecodedVotingOptions();
+		final ImmutableList<ImmutableList<String>> L_writeIns = input.getSelectedDecodedWriteInVotes();
 
 		// Cross-checks.
 		if (!L_votes.isEmpty()) {
@@ -120,28 +120,30 @@ public class VerifyTallyControlComponentBallotBoxAlgorithm {
 		checkArgument((N_C_hat == N_C && N_C >= 2) || (N_C_hat == N_C + 2 && N_C < 2),
 				"The number of mixed votes must be equal to the number of processed votes, if the number of confirmed votes is 2 or greater. "
 						+ "Otherwise, there must be two more mixed votes than confirmed votes (for N_C = 0 or 1).");
-		final GroupVector<PrimeGqElement, GqGroup> p_tilde = primesMappingTableAlgorithms.getEncodedVotingOptions(pTable, List.of());
+		final GroupVector<PrimeGqElement, GqGroup> p_tilde = primesMappingTableAlgorithms.getEncodedVotingOptions(pTable, ImmutableList.emptyList());
 		checkArgument(L_votes.stream().parallel().allMatch(p_tilde::containsAll),
 				"All selected voting options must be a subset of the total voting options.");
 		L_votes.forEach(p_i_hat -> checkArgument(p_i_hat.stream().parallel().distinct().count() == p_i_hat.size(),
 				"All selected encoded voting options in a vote must be distinct."));
 
 		// Operation.
-		final List<String> i_aux = List.of(ee, bb, "MixDecOffline");
+		final AuxiliaryInformation i_aux = AuxiliaryInformation.of(ee, bb, "MixDecOffline");
 
 		final ElGamalMultiRecipientPublicKey EB_pk_cut = new ElGamalMultiRecipientPublicKey(
 				GroupVector.from(EB_pk.getKeyElements().subList(0, delta)));
 
 		final VerificationResult shuffleVerif = mixnet.verifyShuffle(c_dec_4, c_mix_5, pi_mix_5, EB_pk_cut);
 		if (!shuffleVerif.isVerified()) {
-			LOGGER.error("The shuffle proofs are invalid. [ee: {}, bb: {}, errorMessage: {}]", ee, bb, shuffleVerif.getErrorMessages().getFirst());
+			final String errorMessage = shuffleVerif.getErrorMessages().get(0);
+			LOGGER.error("The shuffle proofs are invalid. [ee: {}, bb: {}, errorMessage: {}]", ee, bb, errorMessage);
 		} else {
 			LOGGER.info("The shuffle proofs are valid. [ee: {}, bb: {}]", ee, bb);
 		}
 
 		final VerificationResult decryptVerif = zeroKnowledgeProof.verifyDecryptions(c_mix_5, EB_pk_cut, pi_dec_5, i_aux);
 		if (!decryptVerif.isVerified()) {
-			LOGGER.error("The decryption proofs are invalid. [ee: {}, bb: {}, errorMessage: {}]", ee, bb, decryptVerif.getErrorMessages().getFirst());
+			final String errorMessage = decryptVerif.getErrorMessages().get(0);
+			LOGGER.error("The decryption proofs are invalid. [ee: {}, bb: {}, errorMessage: {}]", ee, bb, errorMessage);
 		} else {
 			LOGGER.info("The decryption proofs are valid. [ee: {}, bb: {}]", ee, bb);
 		}
