@@ -15,6 +15,7 @@
  */
 package ch.post.it.evoting.verifier.backend.verifications.setup.consistency;
 
+import static ch.post.it.evoting.cryptoprimitives.collection.ImmutableList.toImmutableList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.reset;
@@ -33,6 +34,7 @@ import org.junit.jupiter.api.Test;
 
 import com.google.common.collect.MoreCollectors;
 
+import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
 import ch.post.it.evoting.cryptoprimitives.math.GqGroup;
 import ch.post.it.evoting.cryptoprimitives.math.GroupVector;
 import ch.post.it.evoting.cryptoprimitives.math.PrimeGqElement;
@@ -75,11 +77,11 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 	@Test
 	void verifyNokExchangedActualVotingOptions() {
 		final ElectionEventContext electionEventContext = electionDataExtractionService.getElectionEventContext(datasetPath);
-		final List<VerificationCardSetContext> verificationCardSetContexts = electionEventContext.verificationCardSetContexts();
+		final ImmutableList<VerificationCardSetContext> verificationCardSetContexts = electionEventContext.verificationCardSetContexts();
 		final VerificationCardSetContext verificationCardSetContextWithPermutation = permuteActualVotingOptions(verificationCardSetContexts.get(0));
-		final ArrayList<VerificationCardSetContext> verificationCardSetContextsModified = new ArrayList<>(verificationCardSetContexts.size());
-		verificationCardSetContextsModified.add(verificationCardSetContextWithPermutation);
-		verificationCardSetContextsModified.addAll(verificationCardSetContexts.subList(1, verificationCardSetContexts.size()));
+		final ImmutableList<VerificationCardSetContext> verificationCardSetContextsModified = ImmutableList.of(
+						verificationCardSetContextWithPermutation)
+				.append(verificationCardSetContexts.subList(1, verificationCardSetContexts.size()));
 
 		final ElectionDataExtractionService extractionServiceMock = spy(electionDataExtractionService);
 		final ElectionEventContext electionEventContextMock = spy(electionEventContext);
@@ -97,8 +99,8 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 	@Test
 	void verifyNokActualVotingOptionNotInConfig() {
 		final ElectionEventContext electionEventContext = electionDataExtractionService.getElectionEventContext(datasetPath);
-		final List<VerificationCardSetContext> verificationCardSetContexts = electionEventContext.verificationCardSetContexts();
-		final List<VerificationCardSetContext> verificationCardSetContextsModified = addNewActualVotingOption(verificationCardSetContexts);
+		final ImmutableList<VerificationCardSetContext> verificationCardSetContexts = electionEventContext.verificationCardSetContexts();
+		final ImmutableList<VerificationCardSetContext> verificationCardSetContextsModified = addNewActualVotingOption(verificationCardSetContexts);
 
 		final ElectionDataExtractionService extractionServiceMock = spy(electionDataExtractionService);
 		final ElectionEventContext electionEventContextMock = spy(electionEventContext);
@@ -117,8 +119,8 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 	void verifyNokActualVotingOptionMapsToTwoDifferentEncodedVotingOptions() {
 		final ElectionEventContextPayload electionEventContextPayload = electionDataExtractionService.getElectionEventContextPayload(datasetPath);
 		final ElectionEventContext electionEventContext = electionEventContextPayload.getElectionEventContext();
-		final List<VerificationCardSetContext> verificationCardSetContexts = electionEventContext.verificationCardSetContexts();
-		final List<VerificationCardSetContext> verificationCardSetContextsModified = mapToTwoDifferentEncodedVotingOptions(
+		final ImmutableList<VerificationCardSetContext> verificationCardSetContexts = electionEventContext.verificationCardSetContexts();
+		final ImmutableList<VerificationCardSetContext> verificationCardSetContextsModified = mapToTwoDifferentEncodedVotingOptions(
 				electionEventContextPayload.getSmallPrimes(), verificationCardSetContexts);
 
 		final ElectionDataExtractionService extractionServiceMock = spy(electionDataExtractionService);
@@ -136,8 +138,8 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 
 	private VerificationCardSetContext permuteActualVotingOptions(final VerificationCardSetContext verificationCardSetContext) {
 		final PrimesMappingTable primesMappingTable = verificationCardSetContext.getPrimesMappingTable();
-		final GroupVector<PrimesMappingTableEntry, GqGroup> pTable = primesMappingTable.getPTable();
-		final PrimesMappingTableEntry entry0 = pTable.get(0);
+		final GroupVector<PrimesMappingTableEntry, GqGroup> pTable = primesMappingTable.pTable();
+		final PrimesMappingTableEntry entry0 = pTable.getFirst();
 		PrimesMappingTableEntry entry1;
 		int i = 0;
 		do {
@@ -150,7 +152,7 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 		final PrimesMappingTableEntry permutedEntry1 = new PrimesMappingTableEntry(entry1.actualVotingOption(),
 				entry0.encodedVotingOption(), entry1.semanticInformation(), entry1.correctnessInformation());
 
-		final ArrayList<PrimesMappingTableEntry> permutedPTableList = new ArrayList<>(pTable.size());
+		final List<PrimesMappingTableEntry> permutedPTableList = new ArrayList<>(pTable.size());
 		permutedPTableList.add(permutedEntry0);
 		for (int j = 1; j < pTable.size(); j++) {
 			if (j != i) {
@@ -159,7 +161,7 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 				permutedPTableList.add(permutedEntry1);
 			}
 		}
-		final PrimesMappingTable permutedPrimesMappingTable = PrimesMappingTable.from(permutedPTableList);
+		final PrimesMappingTable permutedPrimesMappingTable = PrimesMappingTable.from(ImmutableList.from(permutedPTableList));
 
 		return new VerificationCardSetContext.Builder()
 				.setVerificationCardSetId(verificationCardSetContext.getVerificationCardSetId())
@@ -169,28 +171,30 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 				.setBallotBoxStartTime(verificationCardSetContext.getBallotBoxStartTime())
 				.setBallotBoxFinishTime(verificationCardSetContext.getBallotBoxFinishTime())
 				.setTestBallotBox(verificationCardSetContext.isTestBallotBox())
-				.setNumberOfVotingCards(verificationCardSetContext.getNumberOfVotingCards())
+				.setNumberOfEligibleVoters(verificationCardSetContext.getNumberOfEligibleVoters())
 				.setGracePeriod(verificationCardSetContext.getGracePeriod())
 				.setPrimesMappingTable(permutedPrimesMappingTable)
+				.setDomainsOfInfluence(verificationCardSetContext.getDomainsOfInfluence())
 				.build();
 	}
 
-	private List<VerificationCardSetContext> addNewActualVotingOption(final List<VerificationCardSetContext> verificationCardSetContexts) {
-		final PrimeGqElement encodedVotingOption = verificationCardSetContexts.get(0).getPrimesMappingTable().getPTable().get(0)
+	private ImmutableList<VerificationCardSetContext> addNewActualVotingOption(
+			final ImmutableList<VerificationCardSetContext> verificationCardSetContexts) {
+		final PrimeGqElement encodedVotingOption = verificationCardSetContexts.get(0).getPrimesMappingTable().pTable().getFirst()
 				.encodedVotingOption();
 		return verificationCardSetContexts.stream()
 				.map(verificationCardSetContext -> {
 					final PrimesMappingTable primesMappingTable = verificationCardSetContext.getPrimesMappingTable();
-					if (primesMappingTable.getPTable().stream().anyMatch(entry -> entry.encodedVotingOption().equals(encodedVotingOption))) {
-						final Map<Boolean, List<PrimesMappingTableEntry>> toModify = primesMappingTable.getPTable().stream()
-								.collect(Collectors.partitioningBy(entry -> entry.encodedVotingOption().equals(encodedVotingOption)));
+					if (primesMappingTable.pTable().stream().anyMatch(entry -> entry.encodedVotingOption().equals(encodedVotingOption))) {
+						final Map<Boolean, ImmutableList<PrimesMappingTableEntry>> toModify = primesMappingTable.pTable().stream()
+								.collect(Collectors.partitioningBy(entry -> entry.encodedVotingOption().equals(encodedVotingOption),
+										toImmutableList()));
 						final PrimesMappingTableEntry pTable = toModify.get(true).stream().collect(MoreCollectors.onlyElement());
 						final PrimesMappingTableEntry newEntry = new PrimesMappingTableEntry("newActualVotingOption|NotInConfig",
 								pTable.encodedVotingOption(), pTable.semanticInformation(), pTable.correctnessInformation());
 
-						final ArrayList<PrimesMappingTableEntry> pTableWithNewEntry = new ArrayList<>(pTable.size());
-						pTableWithNewEntry.add(newEntry);
-						pTableWithNewEntry.addAll(toModify.get(false));
+						final ImmutableList<PrimesMappingTableEntry> pTableWithNewEntry = ImmutableList.of(newEntry)
+								.append(toModify.get(false));
 						final PrimesMappingTable notInConfigPrimesMappingTable = PrimesMappingTable.from(pTableWithNewEntry);
 
 						return new VerificationCardSetContext.Builder()
@@ -201,34 +205,35 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 								.setBallotBoxStartTime(verificationCardSetContext.getBallotBoxStartTime())
 								.setBallotBoxFinishTime(verificationCardSetContext.getBallotBoxFinishTime())
 								.setTestBallotBox(verificationCardSetContext.isTestBallotBox())
-								.setNumberOfVotingCards(verificationCardSetContext.getNumberOfVotingCards())
+								.setNumberOfEligibleVoters(verificationCardSetContext.getNumberOfEligibleVoters())
 								.setGracePeriod(verificationCardSetContext.getGracePeriod())
 								.setPrimesMappingTable(notInConfigPrimesMappingTable)
+								.setDomainsOfInfluence(verificationCardSetContext.getDomainsOfInfluence())
 								.build();
 					}
 					return verificationCardSetContext;
-				}).toList();
+				}).collect(toImmutableList());
 	}
 
-	private List<VerificationCardSetContext> mapToTwoDifferentEncodedVotingOptions(final GroupVector<PrimeGqElement, GqGroup> smallPrimes,
-			final List<VerificationCardSetContext> verificationCardSetContexts) {
+	private ImmutableList<VerificationCardSetContext> mapToTwoDifferentEncodedVotingOptions(final GroupVector<PrimeGqElement, GqGroup> smallPrimes,
+			final ImmutableList<VerificationCardSetContext> verificationCardSetContexts) {
 		// Choose a new prime that's not in any pTable
 		final PrimeGqElement primeNotInPTables = smallPrimes.get(smallPrimes.size() - 1);
 
 		// Choose any pTable to modify
 		final int chosenVerificationCardSetContextIndex = 0;
 		final VerificationCardSetContext verificationCardSetContext = verificationCardSetContexts.get(chosenVerificationCardSetContextIndex);
-		final GroupVector<PrimesMappingTableEntry, GqGroup> pTable = verificationCardSetContext.getPrimesMappingTable().getPTable();
+		final GroupVector<PrimesMappingTableEntry, GqGroup> pTable = verificationCardSetContext.getPrimesMappingTable().pTable();
 
 		// Choose a voting option that does not represent a blank voting option
 		final int chosenPTableIndex = 2;
 		final PrimesMappingTableEntry pTableEntry = pTable.get(chosenPTableIndex);
-		final List<PrimesMappingTableEntry> pTableModified = IntStream.range(0, pTable.size())
+		final ImmutableList<PrimesMappingTableEntry> pTableModified = IntStream.range(0, pTable.size())
 				.mapToObj(i -> (i == chosenPTableIndex)
 						? new PrimesMappingTableEntry(pTableEntry.actualVotingOption(), primeNotInPTables, pTableEntry.semanticInformation(),
 						pTableEntry.correctnessInformation())
 						: pTable.get(i)
-				).toList();
+				).collect(toImmutableList());
 
 		return IntStream.range(0, verificationCardSetContexts.size())
 				.mapToObj(i -> (i == chosenVerificationCardSetContextIndex)
@@ -240,11 +245,12 @@ class VerifyPrimesMappingTableConsistencyTest extends SetupVerificationTest {
 						.setBallotBoxStartTime(verificationCardSetContext.getBallotBoxStartTime())
 						.setBallotBoxFinishTime(verificationCardSetContext.getBallotBoxFinishTime())
 						.setTestBallotBox(verificationCardSetContext.isTestBallotBox())
-						.setNumberOfVotingCards(verificationCardSetContext.getNumberOfVotingCards())
+						.setNumberOfEligibleVoters(verificationCardSetContext.getNumberOfEligibleVoters())
 						.setGracePeriod(verificationCardSetContext.getGracePeriod())
 						.setPrimesMappingTable(PrimesMappingTable.from(pTableModified))
+						.setDomainsOfInfluence(verificationCardSetContext.getDomainsOfInfluence())
 						.build()
 						: verificationCardSetContexts.get(i))
-				.toList();
+				.collect(toImmutableList());
 	}
 }
